<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">
    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/nameDetail"
        android:hint = "Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/emailDetail"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="e-mail"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/nameDetail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />
    <EditText
        android:id="@+id/businessNumberDetail"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="Business Number:9 digit"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/emailDetail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />
    <EditText
        android:id="@+id/primaryBusinessDetail"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="Primary Business: Fisher/Distributor/Processor/Fish Monger"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/businessNumberDetail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/addressDetail"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="Address"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/primaryBusinessDetail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />
    <EditText
        android:id="@+id/provinceDetail"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="Province"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/addressDetail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <LinearLayout
        android:id="@+id/detailLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/provinceDetail"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        >



        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Update Data"

            android:onClick="updateContact"/>

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Erase Contact"

            android:onClick="eraseContact"/>



    </LinearLayout>


</android.support.constraint.ConstraintLayout>
