<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.MainActivity">
    <LinearLayout
        android:id="@+id/MainLin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <Button
                android:id="@+id/createButtonMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create"

                 />
            <Button
                android:id="@+id/updateButtonMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update"/>
            <Button
                android:id="@+id/deleteButtonMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"/>


    </LinearLayout>



    <TextView
        android:id="@+id/infoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/MainLin1"
        android:text="Information"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/infoText"
        app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>